Status messages should be easier to localize now.

Expanded the _Theme struct to now hold win
and turn strings. Created two functions that
return win and turn strings.

https://bugzilla.gnome.org/show_bug.cgi?id=723511