src/theme.c
@@ -41,40 +41,50 @@ Theme theme[] = {
    "tileset_50x50_hcontrast.svg",
    NULL,
    "#000000",
-   N_("Circle"), N_("Cross")
+   N_("Circle"), N_("Cross"),
+   N_("Circle wins!"), N_("Cross wins!"),
+   N_("Circle’s turn"), N_("Cross’s turn")
    },
   {
    N_("High Contrast Inverse"),
    "tileset_50x50_hcinverse.svg",
    NULL,
    "#FFFFFF",
-   N_("Circle"), N_("Cross")
+   N_("Circle"), N_("Cross"),
+   N_("Circle wins!"), N_("Cross wins!"),
+   N_("Circle’s turn"), N_("Cross’s turn")
    },
   {
    N_("Red and Green Marbles"),
    "tileset_50x50_faenza-glines-icon1.svg",
    "bg_toplight.png",
    "#727F8C",
-   N_("Red"), N_("Green")
+   N_("Red"), N_("Green"),
+   N_("Red wins!"), N_("Green wins!"),
+   N_("Red’s turn"), N_("Green’s turn")
    },
   {
    N_("Blue and Red Marbles"),
    "tileset_50x50_faenza-glines-icon2.svg",
    "bg_toplight.png",
    "#727F8C",
-   N_("Blue"), N_("Red")
+   N_("Blue"), N_("Red"),
+   N_("Blue wins!"), N_("Red wins!"),
+   N_("Blue’s turn"), N_("Red’s turn")
    },
   {
    N_("Stars and Rings"),
    "tileset_50x50_faenza-gnect-icon.svg",
    "bg_toplight.png",
    "#727F8C",
-   N_("Red"), N_("Green")
+   N_("Red"), N_("Green"),
+   N_("Red wins!"), N_("Green wins!"),
+   N_("Red’s turn"), N_("Green’s turn")
    }
 };
 
-gint n_themes = G_N_ELEMENTS (theme);
 
+gint n_themes = G_N_ELEMENTS (theme);
 
 
 const gchar *
@@ -86,6 +96,23 @@ theme_get_player (PlayerID who)
 }
 
 
+const gchar *
+theme_get_player_win (PlayerID who)
+{
+  if (who == PLAYER1)
+    return theme[p.theme_id].player1_win;
+  return theme[p.theme_id].player2_win;
+}
+
+
+
+const gchar *
+theme_get_player_turn (PlayerID who)
+{
+  if (who == PLAYER1)
+    return theme[p.theme_id].player1_turn;
+  return theme[p.theme_id].player2_turn;
+}
 
 const gchar *
 theme_get_title (gint id)
